@@ -1,3 +1,9 @@
+2005-03-12  Pascal Terjan  <pterjan@linuxfr.org>
+
+	* lib/alexandria/book_providers/proxis.rb:
+
+	Fixed to work again.
+
 2005-03-12  Laurent Sansonetti  <lrz@gnome.org>
 
 	* lib/alexandria/book_providers/bn.rb:
